Added DLC accounting
